# burp-suite-skill

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/burp_orchestration/: SKILL.md
burp_suite_skill/: cli.py  config.py
burp_suite_skill/clients/: belch_client.py  pyburp_client.py
burp_suite_skill/tools/: collaborator.py  diff.py  health.py  history.py  intruder.py  repeater.py  scanner.py  scope.py  sitemap.py  utilities.py
burp_suite_skill/utils/: logging_setup.py  safety.py
tests/: test_belch_client.py  test_cli.py  test_diff.py  test_intruder.py  test_safety.py  test_utilities.py
