[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burp-suite-skill"
version = "0.1.0"
description = "Claude Code skill for orchestrating Burp Suite Professional"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "rich>=13.7.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

[project.scripts]
burp-cli = "burp_suite_skill.cli:main"

[tool.setuptools.packages.find]
include = ["burp_suite_skill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
